--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
   ],
   "typings": "./dist/observable.events.directive.d.ts",
   "author": "Nadav Sinai",
+  "maintainers": [
+    {
+      "email": "ns@nadavsinai.com",
+      "name": "Nadav Sinai"
+    }
+  ],
   "main": "./dist/observable.events.directive.js",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "@angular/common": "2.0.0-rc.4",
     "@angular/compiler": "2.0.0-rc.4",
@@ -56,5 +62,7 @@
     "karma-jasmine": "^0.3.8",
     "rimraf": "^2.5.2"
   },
-  "repository": {}
+  "repository": {
+    "url": "https://github.com/nadavsinai/ng2-observable-events.git"
+  }
 }
